--- a/index.html
+++ b/index.html
@@ -76,8 +76,10 @@
     </div>
 
     <p>
-      <a href="https://github.com/navreenAulakh"> Open Source Code by </a>
-      Navreen Aulakh
+      <a href="https://github.com/navreenAulakh" target="blank">
+        Open Source Code
+      </a>
+      by Navreen Aulakh
     </p>
     <button type="button" class="btn btn-primary" id="current-location">
       Current Location
